add controller, dtos and testing for search flights